# gMySQLcc

./: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  CREATE.md  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  TODO  TODO.md  config.h.in  configure.ac  configure.in  gmysqlcc.glade  gmysqlcc.gladep  ltmain.sh  org.gnome.Gmysqlcc0.4.json
data/: Makefile.am  gmysqlcc.desktop  gmysqlcc.desktop.in
debian/: changelog  control  copyright  files  menu  rules
glade/: gladepart.glade  gladepart.gladep  gmysqlcc.glade  gmysqlcc.gladep
po/: LINGUAS  Makefile.in.in  POTFILES.in  en.po  es.po  fr.po  gmysqlcc.pot  uk.po
slackware/: slack-desc  slack-required
src/: .cvsignore  Makefile.am  gDump.c  gDump.h  gExecSql.c  gExecSql.h  gListServer.c  gListServer.h  gServer.c  gServer.h  gTable.c  gTable.h  gTableEvents.c  gTableEvents.h  gTableUtils.c  gTableUtils.h  gText.c  gUtils.c  gUtils.h  gmlc_dump_control.c  gmlc_dump_control.h  gmlc_dump_format.c  gmlc_dump_format.h  gmlc_dump_format_sql.c  gmlc_dump_format_sql.h  gmlc_dump_source.c  gmlc_dump_source.h  gmlc_dump_source_database.c  gmlc_dump_source_database.h  gmlc_dump_source_query.c  gmlc_dump_source_query.h  gmlc_dump_source_server.c  gmlc_dump_source_server.h  gmlc_dump_source_table.c  gmlc_dump_source_table.h  gmlc_dump_test.c  gmlc_gui_connexions.c  gmlc_gui_connexions.h  gmlc_gui_helpers.c  gmlc_gui_helpers.h  (+95 more)
