dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(gmysqlcc, 0.3.0)
AM_CONFIG_HEADER(config.h)

dnl AC_ISC_POSIX
CFLAGS=""
AC_SUBST(CFLAGS)
AC_PROG_CC
AC_HEADER_STDC

dnl Manage debug infos
CFLAGS="-ggdb"
AC_ARG_ENABLE(debug,
	[  --disable-debug         Remove debug infos in application],
	CFLAGS=""
)
AC_SUBST(CFLAGS)

dnl Check gtk+ Libraries
PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.8.0,,exit)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_CFLAGS)

AC_PATH_PROG(MYSQLCFG, mysql_config, [no])
if test "$MYSQLCFG" = "no"; then
	AC_MSG_ERROR([Sorry, can't found MySQL client library])
fi
MySQLc_CFLAGS=`$MYSQLCFG --cflags`
MySQLc_LIBS=`$MYSQLCFG --libs`
AC_SUBST([MySQLc_CFLAGS])
AC_SUBST([MySQLc_LIBS])

dnl Check Gtk+ Source view control
AC_ARG_WITH(gtksourceview,
	[  --with-gtksourceview       Activate Gtk+ Source View 2.0 editor],
	USE_GTKSOURCEVIEW="1"
)
 
if test "x${USE_GTKSOURCEVIEW}" = "x1"; then
	PKG_CHECK_MODULES(GTKSourceView, gtksourceview-2.0, , exit)
	AC_DEFINE(USE_GTKSOURCEVIEW, "1", [Activate Gtk+ Source View 2.0 editor])
	AC_SUBST(GTKSourceView_LIBS)
	AC_SUBST(GTKSourceView_CFLAGS)
fi

dnl Gettext part
GETTEXT_PACKAGE=gmysqlcc
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Package name for gettext])

ALL_LINGUAS="uk fr es"
AM_GLIB_GNU_GETTEXT

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
	AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale", [Set PACKAGE_LOCALE_DIR in config.h])
else
	AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale", [Set PACKAGE_LOCALE_DIR in config.h])
fi

dnl Set PACKAGE SOURCE DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}", [Set PACKAGE SOURCE DIR in config.h])

dnl Output files
AC_OUTPUT([Makefile
data/Makefile
po/Makefile.in
src/Makefile
])
