AM_CFLAGS = $(GMYSQLCC_CFLAGS)
AM_CPPFLAGS = -DLOCALEDIR=\""$(localedir)"\"
bin_PROGRAMS = gmysqlcc

gmysqlcc_LDADD = $(GMYSQLCC_LIBS)
gmysqlcc_SOURCES = gmlc_dump_control.c \
gmlc_dump_format.c \
gmlc_dump_format_sql.c \
gmlc_dump_source.c \
gmlc_dump_source_database.c \
gmlc_dump_source_query.c \
gmlc_dump_source_server.c \
gmlc_dump_source_table.c \
gmlc_gui_connexions.c \
gmlc_gui_helpers.c \
gmlc_gui_server.c \
gmlc_gui_server_tab.c \
gmlc_gui_server_tab_data.c \
gmlc_gui_server_tab_edit.c \
gmlc_gui_server_tab_help.c \
gmlc_gui_server_tab_query.c \
gmlc_main.c \
gmlc_misc_config.c \
gmlc_misc_hashtable.c \
gmlc_mysql_database.c \
gmlc_mysql_function.c \
gmlc_mysql_procedure.c \
gmlc_mysql_query.c \
gmlc_mysql_row.c \
gmlc_mysql_server.c \
gmlc_mysql_structure.c \
gmlc_mysql_table.c \
gmlc_mysql_view.c
